updated project info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mobile phone antenna power modulation App by SkyWorks</string>
+    <string name="app_name">Mobile phone antenna power modulation App by XXXXWorks</string>
     <string name="home">Home</string>
     <string name="log">Log</string>
     <string name="register">Reg</string>
